ui fixes and additions
added indicator bars, save image button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
 
     <div class="topnav">
-      <a href="#home"><img src="soundstyle.png" style="width:200px"></a>
+      <a href="#home"><img src="assets/soundstyle.png" style="width:200px"></a>
     </div>
 
       <div class="soundstyle-subtitle">
@@ -36,7 +36,7 @@
         </div>
         <button id="login-button" data-bind="click: login">Log in with Spotify
           <span class="icon-wrapper">
-            <img src="Spotify_icon.svg.png" style="width:25px; vertical-align: middle;">
+            <img src="assets/Spotify_icon.svg.png" style="width:25px; vertical-align: middle;">
           </span>
         </button>
       </div>
