--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <div class="soundstyle-subtitle">
         <h1><span class="soundstyle-header">What's your soundstyle?</span></h1>
         <p class="lead">Generate a visualisation of your music taste. <br>
-          Save it, post it, wear it!</p>
+          Save it, post it, wear it! <br>
+        </p>
       </div>
 
       <div id="login">
